frontend/test/should_fail/Chemistry.gm
node class MolecularGraph  {
  gSub:graph;
  iLevel:int=0;
}

edge class contains;

node class Reactant;
node class Product;
edge class MolecularGraphAttribute;

abstract node class MolecularGraphNode;
abstract node class Atom extends MolecularGraphNode;
node class Bond extends MolecularGraphNode;

//All the elements
node class H extends Atom;
node class He extends Atom;
node class Li extends Atom;
node class Be extends Atom;
node class B extends Atom;
node class C extends Atom;
node class N extends Atom;
node class O extends Atom;
node class F extends Atom;
node class Ne extends Atom;
node class Na extends Atom;
node class Mg extends Atom;
node class Al extends Atom;
node class Si extends Atom;
node class P extends Atom;
node class S extends Atom;
node class Cl extends Atom;
node class Ar extends Atom;
node class K extends Atom;
node class Ca extends Atom;
node class Sc extends Atom;
node class Ti extends Atom;
node class V extends Atom;
node class Cr extends Atom;
node class Mn extends Atom;
node class Fe extends Atom;
node class Co extends Atom;
node class Ni extends Atom;
node class Cu extends Atom;
node class Zn extends Atom;
node class Ga extends Atom;
node class Ge extends Atom;
node class As extends Atom;
node class Se extends Atom;
node class Br extends Atom;
node class Kr extends Atom;
node class Rb extends Atom;
node class Sr extends Atom;
node class Y extends Atom;
node class Zr extends Atom;
node class Nb extends Atom;
node class Mo extends Atom;
node class Tc extends Atom;
node class Ru extends Atom;
node class Rh extends Atom;
node class Pd extends Atom;
node class Ag extends Atom;
node class Cd extends Atom;
node class In extends Atom;
node class Sn extends Atom;
node class Sb extends Atom;
node class Te extends Atom;
node class I extends Atom;
node class Xe extends Atom;
node class Cs extends Atom;
node class Ba extends Atom;
node class La extends Atom;
node class Ce extends Atom;
node class Pr extends Atom;
node class Nd extends Atom;
node class Pm extends Atom;
node class Sm extends Atom;
node class Eu extends Atom;
node class Gd extends Atom;
node class Tb extends Atom;
node class Dy extends Atom;
node class Ho extends Atom;
node class Er extends Atom;
node class Tm extends Atom;
node class Yb extends Atom;
node class Lu extends Atom;
node class Hf extends Atom;
node class Ta extends Atom;
node class W extends Atom;
node class Re extends Atom;
node class Os extends Atom;
node class Ir extends Atom;
node class Pt extends Atom;
node class Au extends Atom;
node class Hg extends Atom;
node class Tl extends Atom;
node class Pb extends Atom;
node class Bi extends Atom;
node class Po extends Atom;
node class At extends Atom;
node class Rn extends Atom;
node class Fr extends Atom;
node class Ra extends Atom;
node class Ac extends Atom;
node class Th extends Atom;
node class Pa extends Atom;
node class U extends Atom;
node class Np extends Atom;
node class Pu extends Atom;
node class Am extends Atom;
node class Cm extends Atom;
node class Bk extends Atom;
node class Cf extends Atom;
node class Es extends Atom;
node class Fm extends Atom;
node class Md extends Atom;
node class No extends Atom;